@@ -5,9 +5,10 @@ use App::Image::Generator;
 use English;
 use File::Object;
 use File::Spec::Functions qw(abs2rel);
-use Test::More 'tests' => 2;
+use Test::More 'tests' => 5;
 use Test::NoWarnings;
 use Test::Output;
+use Test::Warn;
 
 # Test.
 @ARGV = (
@@ -20,7 +21,34 @@ stderr_is(
 		return;
 	},
 	$right_ret,
-	'Run help.',
+	'Run help (-h).',
+);
+
+# Test.
+@ARGV = ();
+$right_ret = help();
+stderr_is(
+	sub {
+		App::Image::Generator->new->run;
+		return;
+	},
+	$right_ret,
+	'Run help (no output file).',
+);
+
+# Test.
+@ARGV = (
+	'-x',
+);
+$right_ret = help();
+stderr_is(
+	sub {
+		warning_is { App::Image::Generator->new->run; } "Unknown option: x\n",
+			'Warning about bad argument';
+		return;
+	},
+	$right_ret,
+	'Run help (-x - bad option).',
 );
 
 sub help {
